swiggy-charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-app
  labels:
    app: swiggy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swiggy-app
  template:
    metadata:
      labels:
        app: swiggy-app
    spec:
      containers:
      - name: swiggy-app
        image: abhi0874/swiggy-app:v1
        ports:
        - containerPort: 3000
