swiggy-charts/templates/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: swiggy-app
  labels:
    app: swiggy-app
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: swiggy-app
  type: ClusterIP
